--- a/notes/anglicism_classification.ipynb
+++ b/notes/anglicism_classification.ipynb
@@ -48,12 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('forms.txt') as file: # словар\n",
+    "with open('forms.txt') as file: # словарь словоформ\n",
     "    forms = file.readlines()\n",
     "forms = [word.strip('\\\"»«\\n)(') for word in forms]\n",
     "forms = [word.lower() for word in forms if word]\n",
     "\n",
-    "with open('slovar_edited.csv', encoding='utf-8') as file:\n",
+    "with open('slovar_edited.csv', encoding='utf-8') as file: # словарь англицизмов\n",
     "    slovar = file.readlines()\n",
     "slovar = [word.strip('\\\"»«\\n)(') for word in slovar]\n",
     "slovar = [word.lower() for word in slovar if len(word) > 1]\n"
