remove irrelevant cell

--- a/notes/anglicism_classification.ipynb
+++ b/notes/anglicism_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "(2334516, 16107)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "(63107, 300)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -178,12 +178,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ипере: [1]\n",
-      "гуанкси: [1]\n",
-      "лавэр: [1]\n",
-      "дрэма: [1]\n",
-      "укулель: [1]\n",
-      "голдену: [1]\n"
+      "вэлентайн: [1]\n",
+      "федаи: [1]\n",
+      "вартс: [1]\n",
+      "логфайла: [1]\n",
+      "аутнау: [1]\n",
+      "фаел: [1]\n",
+      "эдв: [1]\n",
+      "анрексист: [1]\n"
      ]
     }
    ],
@@ -203,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7736287785528656"
+       "0.7820669104699988"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,30 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.678\n"
-     ]
-    }
-   ],
-   "source": [
-    "i = 0\n",
-    "for word in neo.loc[neo.label == 1].sample(1000).word.values:\n",
-    "    pred = clf.predict(model[word].reshape(1, -1))\n",
-    "    #print(word, pred)\n",
-    "    if pred[0] == 1:\n",
-    "        i += 1\n",
-    "print(i/1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -274,53 +253,66 @@
        "      <th>word</th>\n",
        "      <th>label</th>\n",
        "      <th>model</th>\n",
+       "      <th>prediction</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8149</th>\n",
-       "      <td>неопанк</td>\n",
+       "      <th>5367</th>\n",
+       "      <td>каучсёрфинг</td>\n",
        "      <td>1</td>\n",
-       "      <td>[0.0037404108, -0.008987354, 0.045442805, 0.01...</td>\n",
+       "      <td>[0.010669713, -0.0027955084, -0.007030979, 0.0...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6681</th>\n",
-       "      <td>легисигн</td>\n",
+       "      <th>1548</th>\n",
+       "      <td>блудхаунд</td>\n",
        "      <td>1</td>\n",
-       "      <td>[-0.0014465022, -0.01831446, -0.006882749, 0.0...</td>\n",
+       "      <td>[0.022531068, -0.0035569028, 0.009551105, -0.0...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10783</th>\n",
-       "      <td>сейвер</td>\n",
+       "      <th>14452</th>\n",
+       "      <td>футер</td>\n",
        "      <td>1</td>\n",
-       "      <td>[-0.013358746, -0.0002563931, 0.021314256, -0....</td>\n",
+       "      <td>[-0.02691076, -0.09293588, 0.06733015, -0.0311...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14421</th>\n",
-       "      <td>фудстилист</td>\n",
+       "      <th>2414</th>\n",
+       "      <td>виггер</td>\n",
        "      <td>1</td>\n",
-       "      <td>[0.009526102, -0.015211814, 0.008865715, 0.030...</td>\n",
+       "      <td>[-0.036411233, -0.006401194, 0.02648523, -0.00...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14487</th>\n",
-       "      <td>фэйслифтинг</td>\n",
+       "      <th>16038</th>\n",
+       "      <td>юнайт</td>\n",
        "      <td>1</td>\n",
-       "      <td>[0.017608402, 0.00046651773, 0.010723985, -0.0...</td>\n",
+       "      <td>[-0.015594717, -0.0003088545, -0.0026805222, -...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              word  label                                              model\n",
-       "8149       неопанк      1  [0.0037404108, -0.008987354, 0.045442805, 0.01...\n",
-       "6681      легисигн      1  [-0.0014465022, -0.01831446, -0.006882749, 0.0...\n",
-       "10783       сейвер      1  [-0.013358746, -0.0002563931, 0.021314256, -0....\n",
-       "14421   фудстилист      1  [0.009526102, -0.015211814, 0.008865715, 0.030...\n",
-       "14487  фэйслифтинг      1  [0.017608402, 0.00046651773, 0.010723985, -0.0..."
+       "              word  label                                              model  \\\n",
+       "5367   каучсёрфинг      1  [0.010669713, -0.0027955084, -0.007030979, 0.0...   \n",
+       "1548     блудхаунд      1  [0.022531068, -0.0035569028, 0.009551105, -0.0...   \n",
+       "14452        футер      1  [-0.02691076, -0.09293588, 0.06733015, -0.0311...   \n",
+       "2414        виггер      1  [-0.036411233, -0.006401194, 0.02648523, -0.00...   \n",
+       "16038        юнайт      1  [-0.015594717, -0.0003088545, -0.0026805222, -...   \n",
+       "\n",
+       "       prediction  \n",
+       "5367            1  \n",
+       "1548            0  \n",
+       "14452           1  \n",
+       "2414            1  \n",
+       "16038           1  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,16 +393,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.790896712701809"
+       "0.7950454809367138"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
